results/SVCOMP/specgen/log-Statement-2024_02_29_18_16_55.txt
class SQLException extends Exception {
}

public class Statement {

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/Statement.java:11: verify: The prover cannot establish an assertion (Assert) in method execute
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:29: verify: The prover cannot establish an assertion (Assert) in method executeQuery
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:20: verify: The prover cannot establish an assertion (Assert) in method executeUpdate
      assert false;
      ^
3 verification failures

class SQLException extends Exception {
}

public class Statement {

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}
/home/max/Documents/JMLGPT/tmp/Statement.java:29: error: unreported exception SQLException; must be caught or declared to be thrown
      throw new SQLException();
      ^
1 error

class SQLException extends Exception {
}

public class Statement {

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  //@ signals (SQLException e) s.contains("<bad/>");
  public void executeQuery(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}
/home/max/Documents/JMLGPT/tmp/Statement.java:11: verify: The prover cannot establish an assertion (ExceptionalPostcondition: /home/max/Documents/JMLGPT/tmp/Statement.java:8:) in method execute
      throw new SQLException();
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:8: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Statement.java:11:
  //@ signals (SQLException e) s.contains("<bad/>");
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:29: verify: The prover cannot establish an assertion (ExceptionalPostcondition: /home/max/Documents/JMLGPT/tmp/Statement.java:26:) in method executeQuery
      throw new SQLException();
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:26: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Statement.java:29:
  //@ signals (SQLException e) s.contains("<bad/>");
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:20: verify: The prover cannot establish an assertion (ExceptionalPostcondition: /home/max/Documents/JMLGPT/tmp/Statement.java:17:) in method executeUpdate
      throw new SQLException();
      ^
/home/max/Documents/JMLGPT/tmp/Statement.java:17: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/Statement.java:20:
  //@ signals (SQLException e) s.contains("<bad/>");
      ^
6 verification failures

